# PhyClone

./: MANIFEST.in  PhyClone_apptainer.def  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: close_stale_issues.yml
phyclone/: cli.py  run.py
phyclone/data/: __init__.py  base.py  cluster_outlier_probabilities.py  pyclone.py
phyclone/data/validator/: PhyClone_schema.json  __init__.py  cluster_file_schema.json  input_validator.py  schema_error_builder.py
phyclone/mcmc/: __init__.py  gibbs_mh.py  particle_gibbs.py
phyclone/process_trace/: __init__.py  consensus.py  map.py  process_trace.py
phyclone/smc/: utils.py
phyclone/smc/kernels/: base.py  bootstrap.py  fully_adapted.py  semi_adapted.py
phyclone/smc/samplers/: base.py  conditional.py  standard.py  unconditional.py
phyclone/smc/swarm/: particle.py  swarm.py  tree_holder.py  tree_shell_node_adder.py
phyclone/tests/: importance_sampler.py  test_clonal_prev.py  test_convolution_caching.py  test_fft_convolve.py  test_input_validator.py  test_load_pyclone_data.py  test_log_convolve.py  test_major_copy_number_error.py  test_marginalisation.py  test_pg_posterior.py  test_pg_subtree_posterior.py  test_proposal_caching.py  test_setup_cluster_df.py  test_tree_shell_node_adder.py
phyclone/tree/: base.py  distributions.py  tree.py  tree_node.py  tree_shell_node_adder.py  utils.py  visitors.py
phyclone/utils/: __init__.py  cache.py  dev.py  exceptions.py  hashing_utils.py  load_h5df.py  load_hdf5.py  math.py  math_utils.py  save_h5df.py  save_hdf5.py  utils.py
(+20 files in other folders)
