[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyClone"
version = "0.8.0"
description="Accurate Bayesian reconstruction of cancer phylogenies from bulk sequencing."
authors = [
    {name = "Andrew Roth", email = "aroth@bccrc.ca"},
    {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
maintainers = [
  {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.12"
dependencies = [
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "scipy",
    "click>=8.0",
    "xxhash>=3.3.0",
    "networkx>=3.6.1",
    "rustworkx>=0.15.1",
    "pandas>=2.2.2",
    "h5py",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/Roth-Lab/PhyClone.git"
DOI = "https://doi.org/10.1093/bioinformatics/btaf344"

[project.scripts]
phyclone = "phyclone.cli:main"

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
exclude = ["*.tests*", "*examples*"]

[tool.setuptools.package-data]
"phyclone" = ["*.json"]
